--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     ext.lifecycle_version = '2.2.0-alpha05'
+    ext.coroutines_version = '1.2.1'
 
     repositories {
         google()
